# MidnightEngine

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Functions.cmake  LICENSE  README.md  _a_r_pointer_8h.html  _a_r_pointer_8h_source.html  _actor_8cpp.html  _actor_8h.html  _actor_8h_source.html  _actor_component_8cpp.html  _actor_component_8h.html  _actor_component_8h_source.html  _allocator_8h.html  _allocator_8h.js  _allocator_8h_source.html  _allocator_8inl.html  _argument_command_node_8cpp.html  _argument_command_node_8h.html  _argument_command_node_8h_source.html  _array_8h.html  _array_8h.js  _array_8h_source.html  _array_8inl.html  _array_utils_8h.html  _array_utils_8h_source.html  _auto_release_pointer_8h.html  _auto_release_pointer_8h.js  _auto_release_pointer_8h_source.html  _auto_release_pointer_8inl.html  _basic_light_component_8cpp.html  _basic_light_component_8h.html  _basic_light_component_8h_source.html  _camera_component_8cpp.html  _camera_component_8h.html  _camera_component_8h_source.html  _camera_manager_8cpp.html  _camera_manager_8h.html  (+717 more)
.github/workflows/: GenerateDocs.yml
Demos/BGFXDemo/: CMakeLists.txt
Demos/BGFXDemo/Programs/ShaderCompiler/: compileShaders.bat
Demos/BGFXDemo/Programs/ShaderCompiler/Shaders/Default/: Default.vert
Demos/BGFXDemo/Source/: BGFXDemo.cpp
Demos/BGFXDemo/Source/Core/: BGFXEngine.cpp  BGFXEngine.h  Core.Module
Demos/BGFXDemo/Source/Core/Platform/macOS/: AppDelegate.swift  Application.swift
Demos/BGFXDemo/Source/Core/Rendering/: ShaderLoader.cpp  ShaderLoader.h
Demos/BGFXDemo/Source/UI/: PerformanceWindow.cpp  UI.Module
Demos/GLFWDemo/: CMakeLists.txt
Demos/GLFWDemo/Resources/Shaders/Fragment/: Default.frag
Demos/GLFWDemo/Resources/Shaders/Vertex/: Default.vert
Demos/GLFWDemo/Source/: GLFWDemo.cpp
Demos/GLFWDemo/Source/Core/: Core.Module  GLFWEngine.cpp  GLFWEngine.h
Demos/GLFWDemo/Source/Core/Input/: InputManager.cpp  InputManager.h
Demos/GLFWDemo/Source/Core/Rendering/: Grid.cpp  Grid.h  RenderObject.h  ShaderProgram.cpp  ShaderProgram.h  Triangle.cpp  Triangle.h
Demos/SDLDemo/: CMakeLists.txt
Demos/SDLDemo/Source/: SDLDemo.cpp
Headers/Core/: EngineTypes.h  ErrorHandler.h  MidnightEngine.h
Headers/Core/Logging/: ConsoleColors.h  Logger.h
Headers/Input/: InputManager.h
Headers/Math/: MathUtils.h  Matrix4.h
Headers/Rendering/: LinearColor.h  Vertex.h
Headers/Utilities/: FileHelper.h
Libraries/include/glad/: glad.h
MidnightApp/: ActorFactory.cpp  ActorFactory.h  CMakeLists.txt  Entrypoint.cpp
MidnightApp/Scene/: FlyingCharacter.cpp  FlyingCharacter.h  MeshObject.cpp  MeshObject.h  ModelActor.cpp  ModelActor.h  PhysicsModelActor.cpp  PhysicsModelActor.h
Programs/ShaderCompiler/: compileShaders.bat  compileShaders.sh
Programs/ShaderCompiler/Include/: common.sh  shaderlib.sh
Resources/Models/: Capsule.fbx  Cascade.fbx  Cube.fbx  Donut.fbx  DoubleCube.mtl  Lamp1.mtl  Lantern_Pyramid.mtl  Lantern_Sphere.mtl  Plane.fbx  SkyCube.fbx  SmoothSphere.fbx  Sphere.fbx  food_apple_01_2k.fbx  horse_statue_01_2k.fbx  marble_bust_01_2k.fbx
Resources/Shaders/Fragment/: Default.frag
Resources/Textures/Cubemaps/: Canyon2.dds
Runtime/: CMakeLists.txt  Entrypoint.cpp
Runtime/Scene/: FlyingCharacter.cpp  FlyingCharacter.h  MeshObject.cpp
ShaderCompiler/: .gitignore  compileShaders.bat  compileShaders.sh
ShaderCompiler/Shaders/Basic/: Basic.frag
ShaderCompiler/Shaders/DirectionalLight/: DirectionalLight.frag
ShaderCompiler/Shaders/Material/: Material.frag  Material.vert
ShaderCompiler/Shaders/PointLight/: PointLight.frag
ShaderCompiler/Shaders/Skybox/: Skybox.frag  Skybox.vert
ShaderCompiler/Shaders/Texture/: Texture.frag  Texture.vert
ShaderCompiler/Shaders/Unlit/: Unlit.frag  Unlit.vert  varying.def.sc
ShaderCompiler/Shaders/Wireframe/: Wireframe.frag  Wireframe.vert  varying.def.sc
Source/: MidnightEngine.cpp  main.cpp
Source/Core/: Core.Module  Core.h  Engine.cpp  Engine.h  EngineMacros.h  EngineTypes.h  ErrorHandler.cpp  IMidnightEngine.h  MidnightEngine.cpp  Object.cpp  Object.h
Source/Core/Input/: InputEnums.h  InputManager.cpp  InputManager.h  Keybind.cpp  Keybind.h
Source/Core/Logging/: Logger.h
Source/Core/Math/: MathUtils.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/Core/Memory/: Allocator.h  Allocator.inl  Array.h  Array.inl  Memory.h  String.cpp  String.h  UniquePtr.h
Source/Core/Platform/: Entry.cpp  Entry.h  Entry.mm  Main.cpp  PlatformData.cpp  PlatformData.h
Source/Core/Rendering/: IRenderable.h  LinearColor.cpp  LinearColor.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderData.h  RenderObject.h  Renderable.h  ResourceLoader.cpp  ResourceLoader.h  ShaderLoader.cpp  ShaderLoader.h  Triangle.cpp  Triangle.h  Vertex.h
Source/Core/Scene/: CameraComponent.cpp  CameraComponent.h  CameraManager.cpp  CameraManager.h  Component.cpp  Component.h  FlyingCharacter.cpp  FlyingCharacter.h  MeshComponent.cpp  MeshComponent.h  MeshObject.cpp  MeshObject.h  Scene.cpp  Scene.h  SceneComponent.cpp  SceneComponent.h  SceneObject.cpp  SceneObject.h
Source/Core/Utilities/: FileHelper.h  Optional.h  Optional.inl  Random.h  Random.inl
Source/Input/: InputManager.cpp
Source/Math/: Matrix4.cpp
Source/Private/Core/: Console.cpp  Core.Module  (+6 more)
Source/Rendering/: LinearColor.cpp  ShaderProgram.cpp
Source/Runtime/: CMakeLists.txt  Entrypoint.cpp
Source/Runtime/Platform/: Entry.cpp  Entry.h
Source/UI/: CharacterInfoWindow.cpp  CharacterInfoWindow.h  PerformanceWindow.cpp  PerformanceWindow.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+104 more)
(+160 files in other folders)
